[package]
name = "libp2prs_split_problem"
version = "0.1.0"
authors = ["zhongxh <zhong_xiaohong@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2prs-traits = { path = "traits", version = "0.1.0", package = "libp2prs-traits" }

[workspace]
members = [
    "traits",
]